cabal-version:      1.12
name:               wacom
version:            1.0.1
synopsis:           Auto-configure my Wacom tablet, if it's plugged in.
description:        Auto-configure my Wacom tablet, if it's plugged in.
category:           System
homepage:           https://github.com/fosskers/wacom
author:             Colin Woodbury
maintainer:         colin@fosskers.ca
copyright:          2018 Colin Woodbury
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

executable wacom
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Widentities -Wpartial-fields

  build-depends:
      base        >=4.7 && <5
    , containers
    , megaparsec  >=7   && <9
    , shelly
    , text
